@@ -11,6 +11,7 @@ phpBMS v0.602/ BMS module v0.602
 - Added date validation when manually typing dates.
 - Fixed datepicker problems caused by javascript getmonth() function.
 - Fixed datepicker rollover behavior.
+- Removed Ability to "pretend to" add/remove lineitems from invoices.
 
 phpBMS v0.601/ BMS module v0.601
 ==================================
